...
          // these lines are a workaround for a react-navigation issue, remove after upgrading >4.0.0-beta.24
          drawerOpenRoute='DrawerOpen'
          drawerCloseRoute='DrawerClose'
          drawerToggleRoute='DrawerToggle'
        >
          <Stack key='root'>
            <Scene initial key='launchScreen' component={LaunchScreen} title='Welcome' />
            <Scene key='login' component={LoginScreen} title='Login' hideNavBar drawerLockMode='locked-closed' />
            <Scene key='register' component={RegisterScreen} title='Register' back drawerLockMode='locked-closed' />
            <Scene key='entities' component={EntitiesScreen} title='Entities' back drawerLockMode='locked-closed' />
            <Scene key='settings' component={SettingsScreen} title='Settings' back drawerLockMode='locked-closed' />
            <Scene key='changePassword' component={ChangePasswordScreen} title='Change Password' back drawerLockMode='locked-closed' />
            <Scene key='forgotPassword' component={ForgotPasswordScreen} title='Forgot Password' back drawerLockMode='locked-closed' />
...
